# openrelik-worker-volatility

./: Dockerfile  README.md  docker-compose-snippet.yml  pyproject.toml
.github/workflows/: docker-push-dev.yml  docker-push.yml  unittests.yml
src/: app.py  tasks.py
tests/: tasks_test.py
