[tool.poetry]
name = "openrelik-worker-volatility"
version = "2025.02.04"
description = "Run volatility3 on a memory dump."
authors = ["Thomas Chopitea <tomchop@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["redis"], version = "^5.4.0"}
openrelik-worker-common = "^2024.11.27"
volatility3 = "^2.8.0"
yara-python = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
